# fatal_police_shootings

./: .gitattributes  .gitignore  Makefile  README.rst  setup.cfg  setup.py  tox.ini
docs/: Makefile  conf.py  contributing.rst  fatal_police_shootings.rst  index.rst  installation.rst  make.bat  usage.rst
fatal_police_shootings/: __init__.py  core.py  fatal_police_shootings.csv
template/hooks/: post-checkout  post-commit  pre-commit
tests/: __init__.py  test_fatal_police_shootings.py
